--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
 body {
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  width: 100%;
+  height:100%;
+  margin: 0;
+  padding: 0;
+  background-color: #0a2333;
+  line-height: 1.4; 
 }
 
 .App {
   text-align: center;
+  /* background-color: #0a2333; */
+  width: 100%;
+  height:100%;
 }
-
-
